# Jay_rcer

./: README.md
VESC/: .mxproject  HAL_M3508.ioc
VESC/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  usart.h
VESC/Core/Src/: can.c  gpio.c  main.c  stm32f4xx_it.c  usart.c
VESC/MDK-ARM/: HAL_M3508.uvguix.Jay.Yang  HAL_M3508.uvoptx  HAL_M3508.uvprojx  startup_stm32f407xx.lst
VESC/MDK-ARM/HAL_M3508/: HAL_M3508.axf  HAL_M3508.build_log.htm  HAL_M3508.hex  HAL_M3508.htm  HAL_M3508.lnp  HAL_M3508.map  HAL_M3508_HAL_M3508.dep  can.crf  can.d  gpio.crf  gpio.d  main.crf  main.d  move.crf  move.d  pid.crf  pid.d  startup_stm32f407xx.d  stm32f4xx_hal.crf  stm32f4xx_hal.d  stm32f4xx_hal_can.crf  stm32f4xx_hal_can.d  stm32f4xx_hal_cortex.crf  stm32f4xx_hal_cortex.d  stm32f4xx_hal_dma.crf  stm32f4xx_hal_dma.d  stm32f4xx_hal_dma_ex.crf  stm32f4xx_hal_dma_ex.d  stm32f4xx_hal_exti.crf  stm32f4xx_hal_exti.d  stm32f4xx_hal_flash.crf  stm32f4xx_hal_flash.d  (+30 more)
VESC/USER/: pid.c  pid.h  user_can_init.c  user_can_init.h  vesc_can.c  vesc_can.h
plumbing_ros_32/: CMakeLists.txt  package.xml
plumbing_ros_32/src/: communica.cpp  read32.cpp  write32.cpp
ros_stm32/HAL_SERIAL__FLOAT/: .mxproject  HAL_R2_CHASSIS.ioc
ros_stm32/plumbing_ros_32/: CMakeLists.txt  package.xml
ros_stm32/plumbing_ros_32/include/plumbing_ros_32/: communica.h
ros_stm32/plumbing_ros_32/msg/: r2_controller.msg
ros_stm32/plumbing_ros_32/src/: communica.cpp  read32.cpp  write32.cpp
ros_tutorial/Ros╤º╧░/: rc_ros╝╝╩⌡╞¬.md  ╟░╓├╞¬.md  ╨≥╤╘.md
source_for_4_and_5/2_╘┤┤·┬δ/: README.md
(+288 files in other folders)
